Made the images in section 2 wrap to avoid overflow if page s zoomed in

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ h2 {
 .main-2-images {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 50px;
 }
 
